# p2p-rust

./: .gitignore  Cargo.toml  Dockerfile  README.md  actor.rs  client.py  code.txt  config.toml  copy-to-server.bat  deploy-docker.sh  deploy.bat  deploy.sh  docker-deploy.bat  docker-deploy.sh  p2p.py  plus_all_files_src.py  readme.md  signal_servers.json  stun_servers.txt  test_html.html
contracts/: readme.md
contracts/counter/: Cargo.toml
contracts/counter/src/: lib.rs
examples/: simulation.rs
modules/: example_plugin.py  web_monitor.py
modules/templates/: index.html
shared/src/: lib.rs
signal-storage/: db
site/: graph-hero.js  index.html  script.js  styles.css
src/: ConnectionManager.rs  config.rs  connection.rs  lib.rs  main.rs  peer.rs
src/commands/: mod.rs
src/contract/: runtime.rs
src/crypto/: crypto.rs  mod.rs  signature.rs  token.rs
src/db/: contract.rs  db.rs  dht.rs  mod.rs  models.rs  myfiles.rs  peer.rs  peer_ops.rs  secret_keys.rs  stats.rs  storage.rs  tables.rs  tokens.rs
src/http/: http_api.rs  http_proxy.rs  mod.rs  proxy.rs  security.rs
src/http/api/: cache.rs  mod.rs  models.rs  utils.rs
src/logger/: mod.rs
src/manager/: ConnectionManager.rs  ManagerPorts.rs  ProcessPackets.rs  StunManager.rs  file_handler.rs  message_handler.rs  mod.rs  storage_handler.rs  types.rs
src/packets/: mod.rs  packets.rs
src/peer/: mod.rs  peer.rs  peer.rs.arhive  peer_2.rs  peer_api.rs  stun.rs  stun.rs.arhive  turn.rs  types.rs  virtual_storage.rs
src/python/: mod.rs
src/signal/: client.rs  mod.rs  peer.rs  peer_search.rs  server.rs  signal.rs  signal_servers.rs  types.rs
src/signal/server/: mod.rs  peer.rs  peer_search.rs  server.rs
src/simulation/: mod.rs
src/tunnel/: mod.rs  tunnel.rs
src/ui/: console.rs  mod.rs
storage/: 000005.ldb  000100.ldb  000113.ldb  LOG  LOG.old  MANIFEST-000021  MANIFEST-000112  db
storage-2/: 000005.ldb  000068.ldb  000071.ldb  LOG  LOG.old  MANIFEST-000011  MANIFEST-000073  db
storage-2/files/: signal_servers.json
storage-signal/: db
storage/db/: 000005.ldb  LOG  LOG.old  MANIFEST-000004
storage/files/: test.txt
tests/: connection_tests.rs  db_tests.rs  mod.rs  packet_tests.rs  peer_api_tests.rs
tools/: code.txt  file_list.txt  list_all_files.py  plus_all_files_src.py
vscode-extension/: .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml
vscode-extension/src/: extension.ts
wallet/: dist.crx  dist.pem  maket.html  manifest.json  package.json  pnpm-lock.yaml  popup.html  popup.js  vite.config.js
wallet/lib/: ethers.js
wallet/public/: manifest.json
wallet/src/background/: index.js
wallet/src/content/: index.js
wallet/src/popup/: App.jsx  index.css
wallet/src/popup/components/: ContractManager.jsx  FileExplorer.jsx  FileManager.jsx  FileViewer.jsx  KeyManager.jsx
wallet/src/popup/screens/: IdentityScreen.jsx  SettingsScreen.jsx  WalletScreen.jsx
wallet/src/popup/services/: api.js  fileService.js
