[package]
name = "P2P-Server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
rustls = "0.23.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aws-lc-sys = "0.21.2"
stun = "0.7.0"
rustls-pemfile = "2.1.3"
warp = "0.3.7"
anyhow = "1.0.89"
env_logger = "0.11.5"
stunclient = "0.4.1"
tracing = "0.1.40"
url = "2.5.2"
tracing-subscriber = "0.3.18"
stun-client = "0.1.4"
async-std = "1.13.0"
aes = "0.8.4"
reqwest = { version = "0.12.7", features = ["json"] }
toml = "0.8.19"
serde_derive = "1.0.214"
tempdir = "0.3.7"
clap = "4.5.27"
lazy_static = "1.5.0"
base64 = "0.22.1"
colored = "3.0.0"
redb = "2.4.0"
tempfile = "3.19.1"
k256 = { version = "0.13.4", features = ["ecdsa", "sha256"] }
rand = { version = "0.9.1", features = ["std"] }
hex = "0.4.3"
wasmtime = "29.0.1"

[dependencies.uuid]
version = "1.12.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[build] 
rustflags = ["-L", "E:\\VHP\\P2P-Server\\libs\\Packet.lib"]

[lib]
name = "p2p_server"
path = "src/lib.rs"
