[package]
name = "P2P-Server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
rustls = "0.23.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rustls-pemfile = "2.1.3"
anyhow = "1.0.89"
env_logger = "0.11.5"
url = "2.5.2"
stun-client = "0.1.4"
async-std = "1.13.0"
aes = "0.8.4"
reqwest = { version = "0.12.7", features = ["json"] }
toml = "0.8.19"
serde_derive = "1.0.214"
tempdir = "0.3.7"
clap = "4.5.27"
lazy_static = "1.5.0"
base64 = "0.22.1"
colored = "3.0.0"
redb = "2.4.0"
tempfile = "3.19.1"
k256 = { version = "0.13.4", features = ["ecdsa", "sha256", "ecdh"] }
rand = { version = "0.9.1", features = ["std"] }
rand_core = "0.6.4"
hex = "0.4.3"
wasmtime = "29.0.1"
syn = { version = "2.0", features = ["full"] }
sha2 = "0.10.8"
chacha20poly1305 = "0.10.1"
futures = "0.3"
hyper = { version = "1.6", features = ["http1", "server"] }
http-body-util = "0.1.3"
bytes = "1.10.1"
hyper-util = { version = "0.1", features = ["tokio"] }
flate2 = "1.0"
mime_guess = "2.0.4"
dashmap = "6.1.0"
chrono = "0.4"
bincode = "1.3.3"
pyo3 = { version = "0.25.0", features = ["auto-initialize"] }
termcolor = "1.2.0"

[dependencies.uuid]
version = "1.12.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[build] 
rustflags = ["-L", "E:\\VHP\\P2P-Server\\libs\\Packet.lib"]
[lib]
name = "p2p_server"
path = "src/lib.rs"
